--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "date-fns": "^2.29.2",
@@ -14,5 +17,14 @@
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "sass": "^1.54.8"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^12.1.5",
+    "@testing-library/user-event": "^14.4.3",
+    "eslint": "^8.23.0",
+    "eslint-config-next": "12.2.5",
+    "jest": "^29.0.2",
+    "jest-environment-jsdom": "^29.0.2"
   }
 }
