--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^8.23.0",
     "eslint-config-next": "12.2.5",
     "jest": "^29.0.2",
-    "jest-environment-jsdom": "^29.0.2"
+    "jest-environment-jsdom": "^29.0.2",
+    "mock-fs": "^5.1.4"
   }
 }
