--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark": "^14.0.2",
-    "remark-html": "^15.0.1",
-    "sass": "^1.54.8"
+    "remark-html": "^15.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -27,6 +26,7 @@
     "eslint-config-next": "12.2.5",
     "jest": "^29.0.2",
     "jest-environment-jsdom": "^29.0.2",
-    "mock-fs": "^5.1.4"
+    "mock-fs": "^5.1.4",
+    "sass": "^1.54.9"
   }
 }
