--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "eslint-config-next": "12.2.5",
     "jest": "^29.0.2",
     "jest-environment-jsdom": "^29.0.2",
-    "mock-fs": "^5.1.4",
-    "sass": "^1.54.9"
+    "mock-fs": "^5.1.4"
   }
 }
